# python-sdk

./: CLAUDE.md  README.md  pyproject.toml
aira/: __init__.py  cli.py  client.py  types.py
aira/extras/: __init__.py  bedrock.py  crewai.py  google_adk.py  langchain.py  mcp.py  openai_agents.py
examples/governance-lifecycle/: README.md  demo.py
examples/langchain-agent/: agent.py
examples/lending-agent/: README.md  agent.py
examples/offline-sync/: sync.py
scripts/: benchmark.py
tests/: test_approval.py  test_client.py  test_extras_bedrock.py  test_extras_crewai.py  test_extras_google_adk.py  test_extras_integration_matrix.py  test_extras_langchain.py  test_extras_mcp.py  test_extras_openai_agents.py  test_new_feature_methods.py  test_offline.py  test_session.py
