[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aira-sdk"
version = "0.1.0"
description = "Python SDK for Aira — legal infrastructure for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Aira", email = "sdk@airaproof.com" }]
keywords = ["aira", "ai", "agents", "notarization", "compliance", "eu-ai-act"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
crewai = ["crewai>=0.80"]

[project.urls]
Homepage = "https://airaproof.com"
Documentation = "https://docs.airaproof.com"
Repository = "https://github.com/aira-proof/python-sdk"
Issues = "https://github.com/aira-proof/python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["aira"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
